codex-rs/tui/src/bottom_pane/chat_composer/snapshots/codex_tui__bottom_pane__chat_composer__history_search__paste_tests__history_search_pasted_query.snap
---
source: tui/src/bottom_pane/chat_composer/history_search_paste_tests.rs
expression: terminal.backend()
---
"                                                                      "
"› git status                                                          "
"                                                                      "
"                                                                      "
"  reverse-i-search: git status  enter accept · esc cancel             "
